objects/nFORCE__Usage_Analytics_Generic_Platform_Event__e.object
<CustomObject>
    <fields>
        <fullName>nFORCE__Body__c</fullName>
        <label>Body</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nFORCE__Executing_User_Id__c</fullName>
        <label>Executing User Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Topic__c</fullName>
        <label>Topic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Usage Analytics Generic Platform Event</label>
    <pluralLabel>Usage Analytics Generic Platform Events</pluralLabel>
</CustomObject>